task-03: в gateway добавлен метод удаления задачи
